--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<<<<<<< Updated upstream
-=======
     <link rel="stylesheet" href="styles.css">
->>>>>>> Stashed changes
     <title>INFO2180 Lab 1</title>
 </head>
 <body>
@@ -17,16 +14,19 @@
     </header>
     <main>
         <h2>Felecia Kenton</h2>
+        <table>
+        <tr>
+            <td><img src="images/plant.JPG" alt="Picture of banana leaf"></td>
+            <td><img src="images/serene.JPG" alt="Picture of building"></td>
+            <td><img src="images/specie.JPG" alt="Picture of the male specie"></td>
+        </tr>
+        </table>
         <p>I am a passionate computer science student with a love for creativity that is evident in everything I do.<br>
             Whether through painting, singing, or taking photos, I thrive on expressing myself through art and music.<br>
             I run a small graphic design and photography business, which allows me to blend my technical skills with my artistic vision.<br>
             I am always eager to develop new skills and explore different hobbies, as my curiosity keeps me engaged and inspired.<br>
-<<<<<<< Updated upstream
-            This desire to constantly learn helps me discover new perspectives and enriches both my personal and professional life.</p>
-=======
             This desire to constantly learn helps me discover new perspectives and enriches both my personal and professional life.
             I am particularly interested in web development because it offers a unique opportunity to create dynamic, interactive experiences that can bring my artistic ideas to life in the digital realm.</p>
->>>>>>> Stashed changes
     </main>
     <footer>
         <p>Copyright &copy; 2024 <Felecia Kenton>.</p>
