--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             I am particularly interested in web development because it offers a unique opportunity to create dynamic, interactive experiences that can bring my artistic ideas to life in the digital realm.</p>
     </main>
     <footer>
-        <p>Copyright &copy; 2024 <Felecia Kenton>.</p>
+        <p>Copyright &copy; 2024 Felecia Kenton.</p>
     </footer>
 </body>
 </html>
